restructure response data
